fixed breaks in html with display property, minor fixes in CSS

--- a/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -25,7 +25,7 @@
 /* End Setup */
 
 body {
-  padding: 50px;
+  margin: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -34,6 +34,7 @@ a {
 }
 
 header {
+  padding: 50px;
   background-color:grey;
   width: auto;
 }
@@ -45,6 +46,7 @@ main {
 input {
   height: 2em;
   width: 10em;
+  display: block;
 }
 
 .tagging {
@@ -65,6 +67,7 @@ input {
 
 .discovery input {
   margin: 0.2em 0;
+  display: inline;
 }
 
 .taglist ul {
